--- a/public/team-details-1.html
+++ b/public/team-details-1.html
@@ -3,17 +3,12 @@
         <div class="col-md-6 col-md-offset-3 text-center">
 			<div id="team-view">
 				<img src="images/team/1.jpg" class="img-responsive mb30" alt="">
-				<h3>Jack Williams</h3>
-                <span class="id-color">Founder & CEO</span>
+				<h3>Fernando De La Cruz</h3>
 				<div class="spacer-half"></div>
-				<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-				<div class="social-icons">
-                            <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-linkedin fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-google-plus fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-rss fa-lg"></i></a>
-                        </div>
+				<p class="text-left">
+                    Fernando De La Cruz has enjoyed a game industry career of over 10 years with more than 15 titles shipped across Nintendo, Sony, PC, Leapfrog and mobile platforms. Fernando worked in the industry as a tester, programmer, designer and producer. Some notable works include Disney’s Club Penguin games on Nintendo DS and Puzzle Quest: Challenge of the Warlords on Nintendo DS. He has also collaborated with Ubisoft, Konami, Marvel, Cartoon Network, Nickelodeon, Rankin & Bass, D3P, and other publishing and license companies.
+                    Fernando has lived in five different countries (U.S., Canada, Spain, Argentina, Japan) and now calls central Florida home where he leads the Game Design B.S. department at Full Sail University.
+                </p>
 			</div>
         </div>
     </div>
