--- a/public/team-details-2.html
+++ b/public/team-details-2.html
@@ -3,17 +3,9 @@
         <div class="col-md-6 col-md-offset-3 text-center">
 			<div id="team-view">
 				<img src="images/team/2.jpg" class="img-responsive mb30" alt="">
-				<h3>Rose Shipp</h3>
-                <span class="id-color">Founder & CEO</span>
+				<h3>Georgios N. Yannakakis</h3>
 				<div class="spacer-half"></div>
-				<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-				<div class="social-icons">
-                            <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-linkedin fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-google-plus fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-rss fa-lg"></i></a>
-                        </div>
+				<p class="text-left">Georgios N. Yannakakis is a Professor and Director of the Institute of Digital Games, University of Malta, and the co-founder of modl.ai. He does research at the crossroads of artificial intelligence, computational creativity, affective computing, advanced game technology, and human-computer interaction and has published over 260 journal and conference papers in these areas. His research has been supported by numerous European grants (including a Marie Skłodowska-Curie Fellowship) and has appeared in Science Magazine and New Scientist, among other venues. He has been involved in a number of journal editorial boards; he is currently an Associate Editor of the IEEE Transactions on Games and the IEEE Transactions on Evolutionary Computation and has been an Associate Editor of the IEEE Transactions on Affective Computing (2009-2017). He has been the General Chair of key conferences in the area of game artificial intelligence (IEEE CIG 2010) and games research (FDG 2013, FDG 2020). He is the co-author of the Artificial Intelligence and Games textbook and the co-organizer of the Artificial Intelligence and Games summer school series.</p>
 			</div>
         </div>
     </div>
