--- a/public/team-details-3.html
+++ b/public/team-details-3.html
@@ -3,18 +3,15 @@
         <div class="col-md-6 col-md-offset-3 text-center">
 			<div id="team-view">
 				<img src="images/team/3.jpg" class="img-responsive mb30" alt="">
-				<h3>Sophie Lane</h3>
-                <span class="id-color">Founder & CEO</span>
+				<h3>Gundolf S. Freyermuth</h3>
 				<div class="spacer-half"></div>
-				<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-				<div class="social-icons">
-                            <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-linkedin fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-google-plus fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-rss fa-lg"></i></a>
-                        </div>
-			</div>
+				<p class="text-left">Gundolf S. Freyermuth is a writer, media producer and co-founder of the Cologne Game Lab (in 2010, together with Prof. Björn Bartholdy). He also co-founded and co-edits (with Prof. Dr. Lisa Gotto) the series “Bild und Bit. Studien zur digitalen Medienkultur” (“Image and Bit. Studies in Digital Media Culture”, since 2012).</p>
+                <li class="text-left">Freyermuth studied Comparative Literature and Aesthetics at the Free University, Berlin, where he became a research and teaching assistant. He wrote his MA thesis on the aesthetics of modern theater and his Ph.D. thesis on the impact of the techno-cultural process of digitalization on the arts, entertainment and communication.</li><br>
+                <li class="text-left">From 2004 to 2014 he was Professor of Comparative Media Studies at the ifs international film school Cologne, where he still teaches as an Associate Professor.</li><br>
+                <li class="text-left">For the last decade, Freyermuth has been lecturing on digital games and game studies all over the world, inter alia in Los Angeles (University of California Los Angeles), Hong Kong (Lingnan University), Shanghai (Shanghai Theater Academy), Budapest (University of Film and Theatre), Vienna, Klagenfurt, Brussels, Maastricht, Paris, Berlin, Munich, Hamburg, Frankfurt.</li><br>
+                <li class="text-left">Prior to his academic career, Freyermuth worked as an editor, department head, reporter and head reporter for several German magazines and as a freelance writer covering literature, film and digital media from the US West Coast. He has published 14 books of non-fiction and fiction and more than 500 essays, features and articles. He directed documentaries and wrote scripts for radio plays, features films, and documentaries.</li><br>
+                <li class="text-left">His research and teaching concentrates on the development of new artistic and communicative practices, new forms of linear and non-linear audiovisuality, cross- and transmedia, network culture and the emergence of a new digital media dispositive.</li><br>
+            </div>
         </div>
     </div>
 </div>
