--- a/public/team-details-4.html
+++ b/public/team-details-4.html
@@ -3,17 +3,12 @@
         <div class="col-md-6 col-md-offset-3 text-center">
 			<div id="team-view">
 				<img src="images/team/4.jpg" class="img-responsive mb30" alt="">
-				<h3>Evan Stone</h3>
-                <span class="id-color">Founder & CEO</span>
+				<h3>Haifa Maamar</h3>
 				<div class="spacer-half"></div>
-				<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-				<div class="social-icons">
-                            <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-linkedin fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-google-plus fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-rss fa-lg"></i></a>
-                        </div>
+                    <p class="text-left">Haifa Maamar joined Full Sail University in 2014 as a Course Director for the Mobile Gaming Masters of Science degree program. She was promoted to Department Chair of Game Development in 2016, and in 2017 she was promoted to Dean overseeing four degree programs including the Game Development Bachelor of Science, Game Design Bachelor of Science, Software Development Bachelor of Science and Mobile Gaming Masters of Science programs.  In 2019, Haifa became the Education Director for Emerging Technologies, overseeing all technology and gaming programs at Full Sail University. She has been leading the emerging technologies education initiatives at Full Sail University.</p>
+                    <p class="text-left">Haifa lived, worked and studied in Ottawa Ontario, and Montreal, Quebec, Canada. She completed her PhD in Computer and Electrical Engineering from the University of Ottawa, Ontario Canada in December 2012 with a focus on mobile networks and augmented and mixed reality.</p>
+                    <p class="text-left">Prior to coming to Full Sail University, Haifa was Software Solutions Architect at the Montreal TMX Stock Exchange and was responsible for designing software solutions for the trading systems of Montreal Exchange, Toronto Exchange, Boston Exchange, New York Exchange, Milan Exchange and London Exchange. Prior to her position at the Montreal TMX Exchange, Haifa was Research Assistant at the PARADISE Research Laboratory at the University of Ottawa and was fortunate enough to be part of different research projects such as wireless multimedia, collaborative virtual environments (CVE), Augmented Reality, Vehicular Ad-hoc Networks (VANET) based class of applications as well as Network Security.</p>
+                    <p class="text-left">Her ongoing mission and passion is to promote women in Computer Science and Emerging Technologies. To achieve this, she has contributed and delivered computer science outreach programs in the community to engage women in Computer Science topics. She is also the co-founder of the Women of Full Sail Group dedicated to engendering empowerment for women, by creating a space of support and mentorship for the women attending (and working at) Full Sail University.</p>
 			</div>
         </div>
     </div>
